tests/ui/rust-2024/unsafe-extern-blocks/extern-items.stderr
error: extern block cannot be declared unsafe
  --> $DIR/extern-items.rs:6:1
   |
LL | unsafe extern "C" {
   | ^^^^^^

error: aborting due to 1 previous error

